# Algorithms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
Algorithm/: Precompile.h  TaskYandex.h  TasksIvan.h
Algorithm/Search/Include/: BinarySearch.h
Algorithm/Search/Source/: BinarySearch.cpp
Algorithm/Sort/: BubbleSort.h  Precompile.h  Readme.md  SelectionSort.cpp  SelectionSort.h
Algorithm/Sort/Include/: BubbleSort.h  InsertionSort.h  QuickSort.h  SelectionSort.h  ShellSort.h
Algorithm/Sort/Source/: QuickSort.cpp  ShellSort.cpp
Algorithm/Tests/Algorithm/: SortingAlgorithmTest.h  SortingTest.cpp
Algorithm/Tests/Include/: SearchAlgorithmTest.h  SortingAlgorithmTest.h
Algorithm/Tests/Source/: SearchTest.cpp  SortingTest.cpp
DataStructures/Include/: BinaryHeap.h
DataStructures/Source/: BinaryHeap.cpp
LeetCode/: 1004.cpp  168.cpp  17.cpp  171.cpp  205.cpp  22.cpp  303.cpp  34.cpp  345.cpp  35.cpp  367.cpp  39.cpp  40.cpp  46.cpp  658.cpp  69.cpp  744.cpp  974.cpp  CMakeLists.txt
Part 1/: CMakeLists.txt
Part 1/Part 1/: CMakeLists.txt  Part 1.cpp  Part 1.h
Tests/Source/Algorithm/: SearchTest.cpp
benchmarks/: Matrix.cpp  Sorting.cpp
benchmarks/common/: Generators.cpp  Generators.hpp
clrs/: _FAD58DE7366495DB4650CFEFAC2FCD61.data.minted  main.tex
clrs/Appendices/: A.tex  B.tex  B1.tex  B2.tex  B3.tex  C.tex  C1.tex  C2.tex  TasksA.tex
clrs/Chapter02/: 2.2.tex  2.3.tex  Chapter2.tex
clrs/Chapter03/: 3.1.tex  3.2.tex  Chapter3.tex  Tasks3.tex
clrs/Chapter04/: 4.1.tex  4.2.tex  Chapter4.tex
clrsSolutions/: 2.1.tex  3.1.tex  A.aux  A.tex  A1.aux  A1.tex  A2.tex  Chapter2.tex  Chapter3.tex  Tasks2.tex  main.aux  main.fdb_latexmk  main.fls  main.tex
src/: Common.hpp  Selections.hpp  Sorting.cpp  Sorting.hpp
src/Search/: BinarySearch.h
src/math/: Matrix.hpp  Strassen.hpp
src/sort/: BubbleSort.cpp  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  ShellSort.cpp
src/sorting/: HeapSort.hpp  InsertionSort.hpp  LinearSorts.hpp  MergeSort.hpp  QuickSorts.hpp
src/structures/: Vector.hpp
tests/: Matrix.cpp  Sorting.cpp  Vector.cpp
